adjusting for deploy

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "npx tsc",
+    "start":"node dist/server.js",
+    "dev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "Luca Alfaro Rampinelli <luca.alfaro.rampinelli@gmail.com> (https://github.com/lucarampi)",
